--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@ Hello there, awesome person!
 <html>
     <head>
     <title>I am a title!</title>
+          <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
     <body>
